src/test/ui/expr_attr_paren_order.stderr
error: variable `X` should have a snake case name
  --> $DIR/expr_attr_paren_order.rs:19:17
   |
LL |             let X = 0;
   |                 ^ If I were you, I would simply convert the identifier to snake case (notice the capitalization): `x`
   |
note: lint level defined here
  --> $DIR/expr_attr_paren_order.rs:17:17
   |
LL |         #![deny(non_snake_case)]
   |                 ^^^^^^^^^^^^^^

error: aborting due to previous error

